--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style3.css
@@ -686,16 +686,23 @@ footer ul li {
   }
 
   nav {
+    position: absolute;
+    /* top: 1rem; */
     margin: 0;
     padding: 0;
+    background-color: #ffffff00;
   }
   nav ul {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: left;
     list-style: none;
-    padding: 0;
+    padding: 2px 0;
     margin: 0;
+    /* width: 30%; */
+    color: #000000;
+    background-color: #ffffff00;
   }
   nav ul li{
     display: flex;
@@ -704,17 +711,57 @@ footer ul li {
     margin: 0;
     margin-top: 5px;
     padding: 0 5px;
-    height: 5px;
+    /* height: 10px; */
+    color: #fff;
+    border: none;
   }
+
+  nav ul li:first-child {
+    color: blue;
+    border-top:none;
+    padding-top:0px;
+    transform: translateY(0px);
+    padding-left: 5px;
+    padding-right: 0;
+  }
+
   #language {
+    display:initial;
     margin: 0;
     padding: 0;
-    position:static;
-    border-radius: 85px;
-    border: 1px solid #beb2b2;
-    background-color: #beb2b2;
-    display: flex;
+    display: revert;
+   
+    /* background-color: none; */
+    padding-left: 5px;
+    
   }
+
+  nav ul li:nth-child(8) {
+    position:static;
+    
+    width: 8.2rem;
+    /*border-radius: 0; */
+    /* border: 1px solid #beb2b2;
+    background-color: #beb2b2; */
+    
+  }
+
+ .icon-part-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items:center;
+  padding: 3rem 0;
+  margin: 0;
+  background-color: #000;
+  color: #fff;
+ }
+
+ .list-icon-part {
+  width: 100%;
+  margin: 0;
+ }
+
 }
 
 
