--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style5.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style5.css
@@ -335,9 +335,14 @@ h1 {
     margin: 20px 0 8px;
 }
 
+.footer-logos i{
+    font-size: .8rem;
+    margin: 0 12px 30px 0;
+}
 
-
-
+.copyright {
+    margin: 0; 
+}
 
 
 
