--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style5.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style5.css
@@ -125,10 +125,13 @@ h1 {
 }
 
 .header-text {
-    padding: 45px 0;
+    padding: 45px 5rem;
     min-width: 1100px;
     font-size: 1.2rem;
     line-height: 34px;
+    margin: 0 auto;;
+    text-align: center;
+    
 }
 
 /************* ICON-PART *************/
@@ -297,7 +300,7 @@ h1 {
     width: 80%;
     height: 1px;
     background: rgb(228, 228, 228);
-    bottom: -40px;
+    bottom: -28px;
 }
 
 .contact-list .list {
@@ -344,23 +347,185 @@ h1 {
     margin: 0; 
 }
 
+.contact-medias {
+    padding: 60px 0 15px;
+    display: flex;
+    align-items: center;
+    width: 95%;
+    margin: 0 auto;
+}
+
+.medias-text {
+    text-align: left;
+    width: 30%;
+}
+
+.medias-text h3 {
+    text-transform: uppercase;
+    font-size: .8rem;
+    margin-bottom: 12px;
+}
+
+.medias-text p {
+    font-size: .8rem;
+    line-height: 22px;
+}
+
+.medias-logos {
+    display: flex;
+    justify-content: space-around;
+    width: 70%;
+}
+
+.medias-logos img {
+    width: 60px;
+}
+
+/***************** FOOTER ******************/
+
+footer {
+    background: black;
+    color: whitesmoke;
+    padding: 25px;
+}
 
 
+footer h3 {
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 32px;
+}
+footer ul {
+    display: flex;
+    justify-content: space-around;
+    max-width:1000px;
+    margin: 0 auto;
+}
+
+/***************** RESPONSIVE ******************/
 
 
+@media screen and (max-width: 1100px) {
+    nav ul {
+        justify-content: center;
+        
+    }
+    nav li {
+        font-size: .5rem;
+        margin: 0 5px;
+       padding:auto 0;
+    }
+}
+
+@media screen and (max-width: 995px) {
+    nav {
+        position: relative;
+        
+    }
+
+    nav li:hover:before {
+        display: none;
+    }
+
+    nav ul {
+        
+        position: absolute;
+        top: 20px;
+        left: 0;
+        background: #b6a7a72c;
+        color: whitesmoke;
+        z-index: 10;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        
+    }
+
+    nav ul:hover {
+        background: #b6a7a700;
+        transition: ease .4s;
+    }
+
+    nav li:nth-first-child {
+        color:rgb(66, 66, 250);
+    }
+
+    nav #language {
+        background: #b6a7a773;
+        color: white;
+    }
+
+    nav #language:hover {
+        background: #b6a7a7d0;
+        color: black;
+    }
+
+    .header-text {
+        min-width: 50%;
+    }
+}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    @media screen and (max-width: 895px) {
+        /* nav li {
+          font-size: 0.7rem;
+        } */
+        .main-header img {
+          width: 60%;
+        }
+        .contact-list .list {
+          padding-left: 15px;
+        }
+        .medias-logos img {
+          width: 40px;
+        }
+        footer ul {
+          flex-wrap: wrap;
+        }
+        footer li {
+          margin: 5px;
+        }
+      }
+      @media screen and (max-width: 704px) {
+        /* nav li {
+          display: none;
+        } */
+        .icon-part-container {
+          display: block;
+        }
+        .icon-part {
+          padding: 0 0 30px;
+        }
+        .list-icon-part {
+          margin-top: 40px;
+        }
+        .header-news {
+          display: block;
+        }
+        .left-part {
+          width: 100%;
+        }
+        .left-part h2 {
+          text-align: center;
+        }
+        .left-part p {
+          text-align: center;
+          margin-bottom: 10px;
+        }
+        .main-news-container {
+          display: block;
+        }
+        .main-news-container div {
+          max-width: 90%;
+          margin: 0 auto;
+          padding-bottom: 15px;
+          margin-top: 58px;
+        }
+        .main-news-container img {
+          width: 50%;
+        }
+        .contact {
+          display: none;
+        }
+      }
+      
