--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
@@ -1,3 +1,67 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+/* header{
+   
+    
+    
+} */
+
+header .prvi {
+    
+}
+
+.prvi h1 , .prvi p , button{
+    
+    float: left;
+
+}
+
+.pr-vi {
+    float: right;
+}
+
+
+.prvi h1{
+    display: grid;
+    padding: 10rem 0;
+    padding-left: 10rem;
+}
+
+.prvi p {
+    padding: 10rem 0;
+    padding-left: 10rem;
+    width: 50%; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
