--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
+  
+
 * {
-    box-sizing: border-box;
+    box-sizing: content-box;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -12,37 +15,55 @@
 } */
 
 header .prvi {
-    
-}
-
-.prvi h1 , .prvi p , button{
-    
+    width: 50%;
     float: left;
-
 }
 
-.pr-vi {
+
+header p,button{
+    color: rgb(167, 143, 167);
+}
+.prvi h1 {
+    padding:10rem 0 0 10rem;
+    /* background-color: #333; */
+    font-size: 60px;
+    font-family: "Alumni Sans Pinstripe", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    width: 50%;
+}
+
+.prvi p {
+    padding: 2rem 0 0rem 10rem;
+    /* background-color: #333; */
+    width: 55%;
+    line-height: 1.7;
+}
+
+
+header button {
+    padding: 1rem 2rem;
+    /* background-color: #333; */
+    /* color: white; */
+    border: 1px solid rgb(167, 143, 167);
+    border-radius: 35px;
+    cursor: pointer;
+    margin: 2rem 0 0 10rem;
+}
+header .pr-vi {
+    width: 50%;
     float: right;
 }
 
 
-.prvi h1{
-    display: grid;
-    padding: 10rem 0;
-    padding-left: 10rem;
+.pr-vi img {
+    width: 100%;
+    height: 100%;
+    /* scale: 1.4; */
+    object-fit: cover;
+    position: absolute;
+    clip: rect(0px, 1000, 0px, 1000px);
 }
-
-.prvi p {
-    padding: 10rem 0;
-    padding-left: 10rem;
-    width: 50%; 
-}
-
-
-
-
-
-
 
 
 
