--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
-  
+
 
 * {
     box-sizing: content-box;
@@ -8,15 +8,17 @@
     list-style-type: none;
 }
 
-/* header{
-   
-    
-    
-} */
+/************************** 1/3 *************************/
+
+header {
+    margin: 0;
+    padding: 0;
+}
 
 header .prvi {
     width: 50%;
     float: left;
+    padding: 14rem 0;
 }
 
 
@@ -24,20 +26,23 @@ header p,button{
     color: rgb(167, 143, 167);
 }
 .prvi h1 {
+    margin-bottom: 1rem;
     padding:10rem 0 0 10rem;
     /* background-color: #333; */
     font-size: 60px;
-    font-family: "Alumni Sans Pinstripe", sans-serif;
-    font-weight: 600;
+    font-family: "Nanum Gothic", sans-serif;
+    font-weight: 100;
     font-style: normal;
     width: 50%;
 }
 
 .prvi p {
-    padding: 2rem 0 0rem 10rem;
+    padding-left:10rem;
+    margin: 0;
     /* background-color: #333; */
     width: 55%;
     line-height: 1.7;
+    height: auto;
 }
 
 
@@ -55,14 +60,87 @@ header .pr-vi {
     float: right;
 }
 
+.pr-vi {
+    width: 50%;
+    height: auto;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
 
 .pr-vi img {
-    width: 100%;
-    height: 100%;
+    width: 200%;
+    height:auto;
     /* scale: 1.4; */
     object-fit: cover;
-    position: absolute;
-    clip: rect(0px, 1000, 0px, 1000px);
+    /* position: absolute;
+    clip: rect(0px, 1000, 0px, 1000px); */
+    margin-left: -100%;
+}
+
+/************************** 2/3 *************************/
+
+aside {
+    margin: 0;
+    padding: 0;
+}
+
+aside .drugi {
+    width: 50%;
+    float: left;
+    padding-top: 5rem;
+    height: auto;
+}
+
+aside .drugi img {
+    width: 75%;
+    height: 450px;
+    display: block;
+    margin-top: 8rem;
+}
+
+aside .dru-gi { /*vert celi div*/
+    width: 50%;
+    float: right;
+    padding-top: 4rem;
+    transform: translateX(-23rem);
+    margin-left: rem;
+}
+
+.dru-gi h2,p,button {
+   margin-top:2.3rem;
+}
+
+
+.dru-gi h2::first-letter {
+    font-size: 72px; /* Agrandit la première lettre */
+    text-transform: uppercase; /* Met en majuscule */
+    /* font-family: "Alumni Sans Pinstripe", sans-serif;
+    font-weight: 600; */
+  }
+
+.dru-gi h2 {
+    /* letter-spacing: 1px; */
+    word-spacing: 2px;
+    font-size: 60px;
+    font-family: "Nanum Gothic", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.dru-gi p {
+    width: 100%;
+}
+
+.dru-gi button {
+    padding: 1rem 2rem;
+    /* background-color: #333; */
+    /* color: white; */
+    border: 1px solid rgb(167, 143, 167);
+    border-radius: 35px;
+    cursor: pointer;
+    margin: 2rem 0 0 0rem;
 }
 
 
@@ -76,15 +154,10 @@ header .pr-vi {
 
 
 
+.aside .tre-ci {
+    float: left;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.form {
+    float: left;
+}
