--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style.css
@@ -84,24 +84,14 @@ header .pr-vi {
 .ar::after {
     content: '';
     width: 300px;
-    height: 2px;
-    border-bottom: 1px solid rgba(167, 143, 167, 0.473);
+    height: 5px;
+    border-bottom: 10px solid rgba(147, 221, 0, 0.452);
     position: absolute;
-    bottom: -114px;
-    left: 44rem;
+    bottom: -7rem;
+    left:41rem;
 }
 
-/* .pr-vi img + .ar::after{
-    content: '';
-    width: 300px;
-    height: 2px;
-    border-bottom: 1px solid rgba(167, 143, 167, 0.753);
-    position: absolute;
-    bottom:-100px;
-    transform: translateX(-15rem);
-    margin: 0;
-    padding: 0;
-} */
+
 
 /************************** 2/3 *************************/
 
@@ -113,15 +103,19 @@ aside {
 aside .drugi {
     width: 50%;
     float: left;
-    padding-top: 2rem;
+    margin: 0;
+    padding:0;
     height: auto;
 }
 
 aside .drugi img {
     width: 75%;
-    height: 450px;
+    height: auto;
     display: block;
-    margin-top: 7.6rem;
+    margin-top: 0;
+    margin: 0;
+    padding: 0;
+    transform: translateY(10.3rem);
 }
 
 aside .dru-gi { /*vert celi div*/
