--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style1.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style1.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Andada+Pro:ital,wght@0,400..840;1,400..840&display=swap'); */
 
 * {
     box-sizing: content-box;
@@ -45,6 +46,7 @@ header {
     color: rgb(167, 143, 167);
     line-height: 1.7;
     width: 95%;
+    letter-spacing: 1px;
 }
 
 .prvi button {
@@ -87,16 +89,16 @@ aside .drugi {
     background-position: bottom;
     background-repeat: no-repeat;
     width: 80%;
-    height: 50vh;
+    height: 55vh;
     /* float: left; */
-     transform: translateY(-1.4rem);
+     transform: translateY(-.9rem);
    
 }
 
 aside .dru-gi {
     float: right;
-    padding-top: 5rem;
-    transform: translateX(-5rem);
+    padding-top: 7rem;
+    transform: translateX(-7rem);
 }
 
 .dru-gi h2,p,button {
@@ -105,22 +107,24 @@ aside .dru-gi {
 }
 
 .dru-gi h2 {
-    transform: translateY(-5rem);
+    transform: translateY(-6rem);
     /* padding: 0; */
     margin: 0;
     padding-top: 3rem;
     font-family: 'Alumni Sans Pinstripe', sans-serif;
     color: rgba(32, 30, 30, 0.973);
-    font-weight: 700;
+    font-weight: 100;
     font-size: 60px;
-    
+    word-spacing: 1px;
+    font-weight: 600;
 }
 
 .dru-gi p {
     font-size: 1.5rem;
     color: rgb(167, 143, 167);
-    line-height: 1.7;
+    line-height: 1.5;
     width: 95%;
+    letter-spacing: 1px;
 }
 
 .dru-gi button {
@@ -133,8 +137,7 @@ aside .dru-gi {
     margin:0;
 }
 
-
-
+/***************** 3/3 *************************/
 
 
 
