--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style1.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/style1.css
@@ -14,7 +14,8 @@
 header {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    
+    margin: 0;
+    /* margin: -2rem 0; */
 }
 
 .prvi {
@@ -140,46 +141,110 @@ aside .dru-gi {
 /***************** 3/3 *************************/
 
 
+.aside {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    width: 100%;
+    /* background-color: chartreuse; */
+    padding-top: 5rem;
+}
+
+.tre-ci {
+    /* margin-top: 5rem; */
+    text-align-last: left;
+    padding-left: 5rem;
+}
+
+.tre-ci h2,p,button {
+    margin: .5rem 0;
+    font-size: 1.55rem;
+}
+.tre-ci h2 {
+    font-family: 'Alumni Sans Pinstripe', sans-serif;
+    color: rgba(32, 30, 30, 0.973);
+    font-weight: 100;
+    font-size: 60px;
+    word-spacing: 1px;
+    font-weight: 600;
+    margin-bottom: 6rem;
+}
+
+.tre-ci p {
+    font-size: 1.5rem;
+    color: rgb(167, 143, 167);
+    line-height: 1.7;
+    width: 95%;
+    letter-spacing: 1px;
+    margin-bottom: 2rem;
+}
+
+.tre-ci button {
+    padding: 1rem 2rem;
+    color: rgba(85, 77, 77, 0.863);
+    border: 1px solid rgb(167, 143, 167);
+    border-radius: 35px;
+    cursor: pointer;
+    transform: translateY(-4.5rem);
+}
+
+.arrr {
+    display: grid;
+    background-image: url('./integration-run-master/img/img-right.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50vh;
+    transform: translateY(-6rem);
+}
 
 
+.for {
+    
+    /* grid-template-columns: 50% 50%; */
+    width: 100%;
+   
+    padding-top:5rem;
+    margin: 0 auto;
+}
 
+.h3 {
+    text-align: center;
+}
 
+.form {
+    display: grid;
+    grid-area: 
+    "text email"
+    "textarea textarea";
+    
+    width: 100%;
+    
+    padding-top: 5rem;
+}
 
+.form form {
+    display: grid;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    width: 100%;
+    
+    
+}
 
+/* form input[type="text"],
+form input[type="email"],{
+    
+} */
 
+form input[type="text"] {
+    grid-area: text;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+form input[type="email"] {
+    grid-area: email;
+}
 
 
 
